fix headings font on smaller displays

--- a/style.css
+++ b/style.css
@@ -470,7 +470,7 @@ and (min-width: 320px)
     }
 
     .before-footer h1 {
-        font-size: 28px;
+        font-size: 25px;
     }
 
     .before-footer > button {
